--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libopencm3-examples"]
 	path = libopencm3-examples
-	url = https://github.com/libopencm3/libopencm3-examples.git
+	url = https://github.com/shane-woods/libopencm3-examples
 [submodule "libopencm3"]
 	path = libopencm3
 	url = https://github.com/shane-woods/libopencm3
